add code-block css around <pre>s

--- a/_posts/julia/fileopt/2015-04-09-fileopt_julia_index.html
+++ b/_posts/julia/fileopt/2015-04-09-fileopt_julia_index.html
@@ -1,7 +1,7 @@
 ---
 name: Overwriting and Updating Plotly Graphs with Julia
 permalink: julia/file-options/
-description: How to manage your graphs in Julia with the fileopt and filename parameter.
+description: How to update Plotly graphs in Julia with the fileopt and filename parameter.
 layout: base
 thumbnail: /images/fileopt.png
 language: julia
@@ -16,6 +16,7 @@ By default, Plotly will create a new file when you call <code>Plotly.plot</code>
 To overwrite a graph, include <code>["filename" => "basic-line", "fileopt" => "overwrite"]</code>
 as the last argument:
 
+<div class="z-depth-1">
 <pre>using Plotly
 
 trace1 = [
@@ -31,6 +32,7 @@ trace2 = [
 data = [trace1, trace2]
 response = Plotly.plot(data, ["filename" => "basic-line", "fileopt" => "overwrite"])
 plot_url = response["url"]</pre>
+</div>
 
 If a graph named "basic-line" already exists in your account, then it will be overwritten
 with this new version and the URL of the graph will persist.
@@ -48,6 +50,7 @@ If the folder doesn't exist, it will be created.
 
 <h4>Creating new files</h4>
 
+<div class="z-depth-1">
 <pre>using Plotly
 
 trace1 = [
@@ -63,7 +66,7 @@ trace2 = [
 data = [trace1, trace2]
 response = Plotly.plot(data, ["filename" => "basic-line", "fileopt" => "new"])
 plot_url = response["url"]</pre>
-
+</div>
 
 With <code>fileopt='new'</code>, Plotly will always create a new file. If a
 file with the same name already exists, then Plotly will append a '(1)' to the end
