--- a/_posts/r/fileopt/2015-04-09-fileopt_r_index.html
+++ b/_posts/r/fileopt/2015-04-09-fileopt_r_index.html
@@ -17,6 +17,7 @@ By default, Plotly will create a new file when you call <code>py$plotly</code>.
 To overwrite a graph, include <code>kwargs=list(filename="my file", fileopt="overwrite")</code>
 as an argument:
 
+<div class="z-depth-1">
 <pre>library(plotly)
 
 py &lt;- plotly()
@@ -33,6 +34,7 @@ trace2 &lt;- list(
 data &lt;- list(trace1, trace2)
 response &lt;- py$plotly(data, kwargs=list(filename="basic-line", fileopt="overwrite"))
 url &lt;- response$url</pre>
+</div>
 
 If a graph named "basic-line" already exists in your account, then it will be overwritten
 with this new version and the URL of the graph will persist.
@@ -44,12 +46,13 @@ your Plotly account in a folder tree.
 
 For example, to save your graphs to the folder <code>my-graphs</code>:
 
-<pre>response &lt;- py$plotly(data, kwargs=list(filename="my-graphs/basic-line", fileopt="overwrite"))</pre>
+<code><pre>response &lt;- py$plotly(data, kwargs=list(filename="my-graphs/basic-line", fileopt="overwrite"))</pre></code>
 
 If the folder doesn't exist, it will be created.
 
 <h4>Creating new files</h4>
 
+<div class="z-depth-1">
 <pre>library(plotly)
 
 py &lt;- plotly()
@@ -66,7 +69,7 @@ trace2 &lt;- list(
 data &lt;- list(trace1, trace2)
 response &lt;- py$plotly(data, kwargs=list(filename="basic line", fileopt="new"))
 url &lt;- response$url</pre>
-
+</div>
 
 With <code>fileopt='new'</code>, Plotly will always create a new file. If a
 file with the same name already exists, then Plotly will append a '(1)' to the end
