update name of tutorial

--- a/_posts/julia/fileopt/2015-04-09-fileopt_julia_index.html
+++ b/_posts/julia/fileopt/2015-04-09-fileopt_julia_index.html
@@ -1,5 +1,5 @@
 ---
-name: Overwriting and Updating Plotly Graphs with Julia
+name: Filenames, Folders, and Updating Plotly Graphs in Julia
 permalink: julia/file-options/
 description: How to update Plotly graphs in Julia with the fileopt and filename parameter.
 layout: base
