--- a/_posts/matlab/fileopt/2015-04-09-fileopt_matlab_index.html
+++ b/_posts/matlab/fileopt/2015-04-09-fileopt_matlab_index.html
@@ -1,5 +1,5 @@
 ---
-name: Overwriting and Updating Plotly Graphs with MATLAB
+name: Filenames, Folders, and Updating Plotly Graphs in MATLAB
 permalink: matlab/file-options/
 description: How to update Plotly graphs in MATLAB with the fileopt parameter.
 layout: base
