--- a/_posts/python/fileopt/2015-04-09-fileopt_python_index.html
+++ b/_posts/python/fileopt/2015-04-09-fileopt_python_index.html
@@ -1,5 +1,5 @@
 ---
-name: Overwriting, Extending, Appending, and Creating New Graphs
+name: Filenames, Folders, and Updating Plotly Graphs in Python
 permalink: python/file-options/
 description: How to update your graphs in Python with the fileopt parameter.
 layout: base
