--- a/_posts/r/fileopt/2015-04-09-fileopt_r_index.html
+++ b/_posts/r/fileopt/2015-04-09-fileopt_r_index.html
@@ -1,5 +1,5 @@
 ---
-name: Overwriting, Extending, Appending, and Creating New Graphs
+name: Filenames, Folders, and Updating Plotly Graphs in R
 permalink: r/file-options/
 description: How to update your graphs in R with the fileopt parameter.
 layout: base
