Code Highlighting Fix

--- a/_posts/2015-04-05-ggplot2-index.html
+++ b/_posts/2015-04-05-ggplot2-index.html
@@ -13,7 +13,7 @@ language: ggplot2
 			<div class="row">
 				<div class="six columns">
 					<div class="z-depth-1">
-						<pre>
+						<pre><code >
 library(plotly)
 
 dsamp &lt;- diamonds[sample(nrow(diamonds), 1000), ]
@@ -22,7 +22,7 @@ qplot(carat, price, data=dsamp, colour=clarity)
 py &lt;- plotly()
 py$ggplotly()
 						
-						</pre>
+						</code></pre>
 					</div>
 				</div>
 				<div class="six columns">
