--- a/_posts/2015-04-05-matlab-index.html
+++ b/_posts/2015-04-05-matlab-index.html
@@ -14,7 +14,7 @@ language: matlab
 			<div class="row">
 				<div class="six columns">
 					<div class="z-depth-1">
-						<pre>
+						<pre><code >
 signin('DemoAccount', 'lr1c37zw81')
 
 % new figure
@@ -33,7 +33,7 @@ surf(Z);
 p = fig2plotly(fig);
 
 						
-						</pre>
+						</code></pre>
 					</div>
 				</div>
 				<div class="six columns">
