--- a/_posts/2015-04-05-matplotlib-index.html
+++ b/_posts/2015-04-05-matplotlib-index.html
@@ -14,7 +14,7 @@ language: matplotlib
 			<div class="row">
 				<div class="six columns">
 					<div class="z-depth-1">
-						<pre>
+						<pre><code >
 import matplotlib.pyplot as plt
 import matplotlib.mlab as mlab
 import numpy as np
@@ -36,7 +36,7 @@ ax.grid()
 
 plot_url = py.plot_mpl(fig)
 						
-						</pre>
+						</code></pre>
 					</div>
 				</div>
 				<div class="six columns">
