Iframe layout change

--- a/_posts/ggplot2/iframes/2015-04-09-iframes_ggplot2_index.htm
+++ b/_posts/ggplot2/iframes/2015-04-09-iframes_ggplot2_index.htm
@@ -2,7 +2,7 @@
 name: Embedding Graphs in HTML
 permalink: ggplot2/embed-ggplot2-graphs-in-HTML/
 description: How to embed plotly's ggplot2 graphs with an iframe in HTML.
-layout: base
+layout: getstart
 language: r
 page_type: example_index
 has_thumbnail: false
