--- a/_posts/julia/iframes/2015-05-26-iframes_julia_index.htm
+++ b/_posts/julia/iframes/2015-05-26-iframes_julia_index.htm
@@ -2,7 +2,7 @@
 name: Embedding Graphs in HTML
 permalink: julia/embedding-plotly-graphs-in-HTML/
 description: How to embed plotly graphs with an iframe in HTML.
-layout: base
+layout: getstart
 language: julia
 page_type: example_index
 has_thumbnail: false
