--- a/_posts/ggplot2/iframes/2015-04-09-iframes_ggplot2_index.html
+++ b/_posts/ggplot2/iframes/2015-04-09-iframes_ggplot2_index.html
@@ -4,7 +4,7 @@ name: Embedding Graphs in HTML
 permalink: ggplot2/embedding-plotly-graphs-in-HTML/
 description: How to embed plotly's ggplot2 graphs with an iframe in HTML.
 layout: getstart-base
-language: r
+language: ggplot2
 page_type: example_index
 has_thumbnail: false
 display_as: get_request
@@ -14,4 +14,4 @@ display_as: get_request
 <p>Plotly graphs can be embedded in any HTML page. This includes <a href="http://blog.plot.ly/post/106630252117/plot-with-ggplot2-and-plotly-within-knitr-reports">interactive graphs in knitr reports</a>, <a href="https://wordpress.org/plugins/wp-plotly">Wordpress sites</a>, <a href="https://github.com/chriddyp/plotly-shiny">Shiny Apps</a>, blogs, and more.</p></br>
 
 <p>For more on embedding Plotly graphs in HTML documents, <a href="https://plot.ly/how-to-embed-plotly-graphs-in-websites">see our tutorial</a>.</p></br>
-</div></br>
+</div><br><br><br><br><br><br><br>
