--- a/_posts/r/iframes/2015-05-26-iframes_r_index.html
+++ b/_posts/r/iframes/2015-05-26-iframes_r_index.html
@@ -14,4 +14,4 @@ display_as: get_request
 <p>Plotly graphs can be embedded in any HTML page. This includes <a href="http://blog.plot.ly/post/106630252117/plot-with-ggplot2-and-plotly-within-knitr-reports">interactive graphs in knitr reports</a>, <a href="https://wordpress.org/plugins/wp-plotly">Wordpress sites</a>, <a href="https://github.com/chriddyp/plotly-shiny">Shiny Apps</a>, blogs, and more.</p></br>
 
 <p>For more on embedding Plotly graphs in HTML documents, <a href="https://plot.ly/how-to-embed-plotly-graphs-in-websites">see our tutorial</a>.</p></br>
-</div></br>
+</div></br><br><br><br><br><br><br>
