add .embed to graph on ggplot2 splash

--- a/_posts/2015-04-05-ggplot2-index.html
+++ b/_posts/2015-04-05-ggplot2-index.html
@@ -27,7 +27,7 @@ py$ggplotly()
 				</div>
 				<div class="six columns">
 					<div class="border">
-					<iframe id="igraph" scrolling="no" height="400" src="https://plot.ly/~chris/2223/500/400" width="100%">
+					<iframe id="igraph" scrolling="no" height="400" src="https://plot.ly/~chris/2223.embed" width="100%">
                 </iframe>
 						
 						
