add .embed to graph on matlab splash

--- a/_posts/2015-04-05-matlab-index.html
+++ b/_posts/2015-04-05-matlab-index.html
@@ -38,7 +38,7 @@ p = fig2plotly(fig);
 				</div>
 				<div class="six columns">
 					<div class="border">
-					<iframe id="igraph" scrolling="no" margin="none" padding="none" height="401" src="https://plot.ly/~matlab_user_guide/952" width="100%">
+					<iframe id="igraph" scrolling="no" margin="none" padding="none" height="401" src="https://plot.ly/~matlab_user_guide/952.embed" width="100%">
                 </iframe>
 						
 						
