add .embed to graph on matplotlib splash

--- a/_posts/2015-04-05-matplotlib-index.html
+++ b/_posts/2015-04-05-matplotlib-index.html
@@ -41,7 +41,7 @@ plot_url = py.plot_mpl(fig)
 				</div>
 				<div class="six columns">
 					<div class="border">
-                <iframe id="igraph" scrolling="no" height="462" src="https://plot.ly/~chris/2252/462/462" width="100%">
+                <iframe id="igraph" scrolling="no" height="462" src="https://plot.ly/~chris/2252.embed" width="100%">
                 </iframe>						
 					</div>
 				</div>
