View examples button

--- a/_posts/ggplot2/getting-started/2015-05-25-getting-started_ggplot2_index.html
+++ b/_posts/ggplot2/getting-started/2015-05-25-getting-started_ggplot2_index.html
@@ -128,3 +128,6 @@ ggiris
         </div>
     </section>
 
+<div class="row centered btnrow">	
+	<a href="/api/ggplot2/" class="button no_underline">view examples</a><br>
+</div>
