--- a/_posts/julia/getting-started/2015-05-25-getting-started_julia_index.html
+++ b/_posts/julia/getting-started/2015-05-25-getting-started_julia_index.html
@@ -108,3 +108,6 @@ Plotly.plot([x y])</code></pre>
         </div>
     </section>
 
+<div class="row centered btnrow">
+	<a href="/api/julia/" class="button no_underline">VIEW EXAMPLES</a><br>
+</div>
