--- a/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
+++ b/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
@@ -118,3 +118,7 @@ error: [1x0 char]</code></pre>
             </p>
         </div>
     </section>
+
+<div class="row centered btnrow">
+	<a href="/api/matlab/" class="button no_underline">view examples</a><br>
+</div>
