--- a/_posts/matplotlib/getting-started/2015-05-25-getting-started_matplotlib_index.html
+++ b/_posts/matplotlib/getting-started/2015-05-25-getting-started_matplotlib_index.html
@@ -108,3 +108,7 @@ unique_url = py.plot(plotly_fig)</code></pre>
             </p>
         </div>
     </section>
+
+<div class="row centered btnrow">
+	<a href="/api/matplotlib/" class="button no_underline">view examples</a>
+</div>
