--- a/_posts/nodejs/getting-started/2015-05-25-getting-started_node_js_index.html
+++ b/_posts/nodejs/getting-started/2015-05-25-getting-started_node_js_index.html
@@ -78,3 +78,7 @@ plotly.plot(data, layout, function (err, msg) {
 
         </div>
     </section>
+	
+<div class="row centered btnrow">
+	<a href="/api/nodejs/" class="button no_underline">view examples</a>
+</div><br>
