--- a/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
+++ b/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
@@ -134,3 +134,7 @@ unique_url = py.plot(data, filename = 'basic-line')</code></pre>
             </p>
         </div>
     </section>
+
+<div class="row centered btnrow">
+	<a href="/api/python/" class="button no_underline">view examples</a><br>
+</div>
