plotly.js and link fix

--- a/_posts/ggplot2/getting-started/2015-05-25-getting-started_ggplot2_index.html
+++ b/_posts/ggplot2/getting-started/2015-05-25-getting-started_ggplot2_index.html
@@ -129,5 +129,5 @@ ggiris
     </section>
 
 <div class="row centered btnrow">	
-	<a href="/api/ggplot2/" class="button no_underline">view examples</a><br>
+	<a href="/ggplot2/" class="button no_underline">view examples</a><br>
 </div>
