--- a/_posts/julia/getting-started/2015-05-25-getting-started_julia_index.html
+++ b/_posts/julia/getting-started/2015-05-25-getting-started_julia_index.html
@@ -109,5 +109,5 @@ Plotly.plot([x y])</code></pre>
     </section>
 
 <div class="row centered btnrow">
-	<a href="/api/julia/" class="button no_underline">VIEW EXAMPLES</a><br>
+	<a href="/julia/" class="button no_underline">VIEW EXAMPLES</a><br>
 </div>
