--- a/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
+++ b/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
@@ -136,5 +136,5 @@ unique_url = py.plot(data, filename = 'basic-line')</code></pre>
     </section>
 
 <div class="row centered btnrow">
-	<a href="/api/python/" class="button no_underline">view examples</a><br>
+	<a href="/python/" class="button no_underline">view examples</a><br>
 </div>
