--- a/_posts/r/getting-started/2015-05-25-getting-started_r_index.html
+++ b/_posts/r/getting-started/2015-05-25-getting-started_r_index.html
@@ -155,5 +155,5 @@ response &lt;- py$plotly(trace0, trace1, kwargs=list(filename="basic-line", file
     </section>
 
 <div class="row centered btnrow">
-	<a href="/api/r/" class="button no_underline">view examples</a>
+	<a href="/r/" class="button no_underline">view examples</a>
 </div>
