--- a/_posts/ggplot2/functions/2015-04-09-functions_ggplot2_index.html
+++ b/_posts/ggplot2/functions/2015-04-09-functions_ggplot2_index.html
@@ -1,5 +1,5 @@
 ---
-title: GGPLOT2 Functions | Examples | Plotly
+title: ggplot2 Functions | Examples | Plotly
 name: Functions
 permalink: ggplot2/functions/
 description: How to plot functions in {language}.
