--- a/_posts/ggplot2/histogram/2015-04-09-histogram_ggplot2_index.html
+++ b/_posts/ggplot2/histogram/2015-04-09-histogram_ggplot2_index.html
@@ -1,5 +1,5 @@
 ---
-title: GGPLOT2 Histograms | Examples | Plotly
+title: ggplot2 Histograms | Examples | Plotly
 name: Histograms
 permalink: ggplot2/histograms/
 description: How to make a histogram in {language}. {num_categories} examples of colored, horizontal, and normal histogram bar charts.
