--- a/_posts/ggplot2/line_shapes/2015-04-09-line_shapes_ggplot2_index.html
+++ b/_posts/ggplot2/line_shapes/2015-04-09-line_shapes_ggplot2_index.html
@@ -1,5 +1,5 @@
 ---
-title: GGPLOT2 Line Shapes | Examples | Plotly
+title: ggplot2 Line Shapes | Examples | Plotly
 name: Line Shapes
 permalink: ggplot2/line-shapes/
 description: How to make line shapes in {language}.
