--- a/_posts/ggplot2/maps/2015-04-09-maps_ggplot2_index.html
+++ b/_posts/ggplot2/maps/2015-04-09-maps_ggplot2_index.html
@@ -1,5 +1,5 @@
 ---
-title: GGPLOT2 Maps | Examples | Plotly
+title: ggplot2 Maps | Examples | Plotly
 name: Maps
 permalink: ggplot2/maps/
 description: How to visualize data with maps in {language}.
