--- a/_posts/matplotlib/annotations/2015-04-09-annotations_matplotlib_index.html
+++ b/_posts/matplotlib/annotations/2015-04-09-annotations_matplotlib_index.html
@@ -1,5 +1,5 @@
 ---
-title: Matplotlib Text and Annotations | Examples | Plotly
+title: matplotlib Text and Annotations | Examples | Plotly
 name: Text and Annotations
 permalink: matplotlib/text-and-annotations/
 description: How to add text labels and annotations to plots in {language}.
