--- a/_posts/matplotlib/histogram/2015-04-09-histogram_matplotlib_index.html
+++ b/_posts/matplotlib/histogram/2015-04-09-histogram_matplotlib_index.html
@@ -1,5 +1,5 @@
 ---
-title: Matplotlib Histograms | Examples | Plotly
+title: matplotlib Histograms | Examples | Plotly
 name: Histograms
 permalink: matplotlib/histograms/
 description: How to make a histogram in {language}. {num_categories} examples of colored, horizontal, and normal histogram bar charts.
