--- a/_posts/matplotlib/line_and_scatter/2015-04-09-line_and_scatter_matplotlib_index.html
+++ b/_posts/matplotlib/line_and_scatter/2015-04-09-line_and_scatter_matplotlib_index.html
@@ -1,5 +1,5 @@
 ---
-title: Matplotlib Line and Scatter Plots | Examples | Plotly
+title: matplotlib Line and Scatter Plots | Examples | Plotly
 name: Line and Scatter Plots
 permalink: matplotlib/line-and-scatter/
 description: How to make line and scatter plots in {language}. {num_categories} examples of basic and colored line and scatter plots.
