--- a/_posts/ggplot2/bar/2015-04-09-bar_ggplot2_index.html
+++ b/_posts/ggplot2/bar/2015-04-09-bar_ggplot2_index.html
@@ -1,5 +1,5 @@
 ---
-title: GGPLOT2 Bar Charts | Examples | Plotly
+title: ggplot2 Bar Charts | Examples | Plotly
 name: Bar Charts
 permalink: ggplot2/bar-charts/
 description: How to make a bar chart in {language}. {num_categories} examples of grouped, stacked, overlaid, and colored bar charts.
