--- a/_posts/ggplot2/facets/2015-04-09-facets_ggplot2_index.html
+++ b/_posts/ggplot2/facets/2015-04-09-facets_ggplot2_index.html
@@ -1,5 +1,5 @@
 ---
-title: GGPLOT2 Facet | Examples | Plotly
+title: ggplot2 Facet | Examples | Plotly
 name: Facet
 permalink: ggplot2/facet/
 description: How to make subplots with facet_wrap and facet_grid in ggplot2 and R.
