--- a/_posts/ggplot2/geom_polygon/2015-04-09-geom_polygon_ggplot2_index.html
+++ b/_posts/ggplot2/geom_polygon/2015-04-09-geom_polygon_ggplot2_index.html
@@ -1,5 +1,5 @@
 ---
-title: GGPLOT2 Geom Polygon | Examples | Plotly
+title: ggplot2 Geom Polygon | Examples | Plotly
 name: geom_polygon
 permalink: ggplot2/geom_polygon/
 description: Examples of geom_polygon in R.
