--- a/_posts/matplotlib/area/2015-04-09-area_matplotlib_index.html
+++ b/_posts/matplotlib/area/2015-04-09-area_matplotlib_index.html
@@ -1,5 +1,5 @@
 ---
-title: Matplotlib Filled Area Plots | Examples | Plotly
+title: matplotlib Filled Area Plots | Examples | Plotly
 name: Filled Area Plots
 permalink: matplotlib/filled-area-plots/
 description: How to make a filled area plot in {language}. An area chart displays a solid color between the traces of a graph.
