--- a/_posts/matplotlib/bar/2015-04-09-bar_matplotlib_index.html
+++ b/_posts/matplotlib/bar/2015-04-09-bar_matplotlib_index.html
@@ -1,5 +1,5 @@
 ---
-title: Matplotlib Bar Charts | Examples | Plotly
+title: matplotlib Bar Charts | Examples | Plotly
 name: Bar Charts
 permalink: matplotlib/bar-charts/
 description: How to make a bar chart in {language}. {num_categories} examples of grouped, stacked, overlaid, and colored bar charts.
