--- a/_posts/matplotlib/bubble/2015-04-09-bubble_matplotlib_index.html
+++ b/_posts/matplotlib/bubble/2015-04-09-bubble_matplotlib_index.html
@@ -1,5 +1,5 @@
 ---
-title: Matplotlib Bubble Charts | Examples | Plotly
+title: matplotlib Bubble Charts | Examples | Plotly
 name: Bubble Charts
 permalink: matplotlib/bubble-charts/
 description: How to make a bubble chart in {language}. Examples of scatter charts whose markers have variable color, size, and symbols.
