--- a/_posts/matplotlib/iframes/2015-05-26-iframes_matplotlib_index.html
+++ b/_posts/matplotlib/iframes/2015-05-26-iframes_matplotlib_index.html
@@ -1,5 +1,5 @@
 ---
-title: Matplotlib Embedding Graphs in HTML | Examples | Plotly
+title: matplotlib Embedding Graphs in HTML | Examples | Plotly
 name: Embedding Graphs in HTML
 permalink: matplotlib/embedding-plotly-graphs-in-HTML/
 description: How to embed plotly's matplotlib graphs with an iframe in HTML.
