--- a/_posts/matplotlib/scatter_exclusive/2015-04-09-scatter_exclusive_matplotlib_index.html
+++ b/_posts/matplotlib/scatter_exclusive/2015-04-09-scatter_exclusive_matplotlib_index.html
@@ -1,5 +1,5 @@
 ---
-title: Matplotlib Scatter | Examples | Plotly
+title: matplotlib Scatter | Examples | Plotly
 name: Scatter
 permalink: matplotlib/scatter/
 description: How to make a scatter plot in {language}. {num_categories} examples of the scatter function.
