--- a/_posts/matplotlib/subplots/2015-04-09-subplots_matplotlib_index.html
+++ b/_posts/matplotlib/subplots/2015-04-09-subplots_matplotlib_index.html
@@ -1,5 +1,5 @@
 ---
-title: Matplotlib Subplots | Examples | Plotly
+title: matplotlib Subplots | Examples | Plotly
 name: Subplots
 permalink: matplotlib/subplots/
 description: How to make subplots in {language}. {num_categories} examples of stacked, custom-sized, and gridded subplots.
