--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@ title: 404 Page
     </head>
 
 
-  {% include new_header.html %}
+  {% include header.html %}
   <body>
   	<div class="sectionseparator_a">
 	  	<div class="bigcontainer" >
@@ -36,7 +36,7 @@ title: 404 Page
 	  	</div>
   	</div>
   
-  {% include new_footer.html %}
+  {% include footer.html %}
   
 
 
