Get a better title up there

--- a/_posts/user_guide_python/2015-05-27-3d-plots-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-3d-plots-tutorial.html
@@ -1,7 +1,7 @@
 ---
 permalink: python/3d-plots-tutorial/
 description: A tutorial on how to make beautiful 3d plots with plotly and Python or IPython.
-name: 3d plots tutorial
+name: 3d plots
 layout: base
 thumbnail: /images/static-image.png
 language: python
