--- a/_posts/user_guide_python/2015-05-27-bar-charts-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-bar-charts-tutorial.html
@@ -1,7 +1,7 @@
 ---
 permalink: python/bar-charts-tutorial/
 description: A tutorial on how to make beautiful bar charts with plotly and Python or IPython.
-name: bar charts tutorial
+name: Bar charts
 layout: base
 thumbnail: /images/static-image.png
 language: python
