--- a/_posts/user_guide_python/2015-05-27-bubble-charts-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-bubble-charts-tutorial.html
@@ -1,7 +1,7 @@
 ---
 permalink: python/bubble-charts-tutorial/
 description: A tutorial on how to make beautiful bubble charts with plotly and Python or IPython.
-name: bubble charts tutorial
+name: Bubble charts
 layout: base
 thumbnail: /images/static-image.png
 language: python
