--- a/_posts/user_guide_python/2015-05-27-heatmaps-contours-and-2dhistograms-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-heatmaps-contours-and-2dhistograms-tutorial.html
@@ -1,7 +1,7 @@
 ---
 permalink: python/heatmaps-contours-and-2dhistograms-tutorial/
 description: A tutorial on how to make beautiful heatmaps, contours and 2D histograms with plotly and Python or IPython.
-name: heatmaps contours and 2dhistograms tutorial
+name: Heatmaps, contours and 2d histograms
 layout: base
 thumbnail: /images/static-image.png
 language: python
