--- a/_posts/user_guide_python/2015-05-27-histograms-and-box-plots-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-histograms-and-box-plots-tutorial.html
@@ -1,7 +1,7 @@
 ---
 permalink: python/histograms-and-box-plots-tutorial/
 description: A tutorial on how to make beautiful histograms and box plots with plotly and Python or IPython.
-name: histograms and box plots tutorial
+name: Histograms and box plots
 layout: base
 thumbnail: /images/static-image.png
 language: python
