--- a/_posts/user_guide_python/2015-05-27-line-and-scatter-plots-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-line-and-scatter-plots-tutorial.html
@@ -1,7 +1,7 @@
 ---
 permalink: python/line-and-scatter-plots-tutorial/
 description: A tutorial on how to make beautiful line and scatter plots with plotly and Python or IPython.
-name: line and scatter plots tutorial
+name: Line and scatter plots
 layout: base
 thumbnail: /images/static-image.png
 language: python
