--- a/_posts/user_guide_python/2015-05-27-matplotlib-to-plotly-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-matplotlib-to-plotly-tutorial.html
@@ -1,7 +1,7 @@
 ---
 permalink: python/matplotlib-to-plotly-tutorial/
 description: A tutorial on how to convert matplotlib figures to beautiful plotly figures.
-name: matplotlib to plotly tutorial
+name: Matplotlib to plotly
 layout: base
 thumbnail: /images/static-image.png
 language: python
