--- a/_posts/user_guide_python/2015-05-27-overview.html
+++ b/_posts/user_guide_python/2015-05-27-overview.html
@@ -1,7 +1,7 @@
 ---
 permalink: python/overview/
 description: An overview of plotly and its Python API Library
-name: overview
+name: Overview
 layout: base
 thumbnail: /images/static-image.png
 language: python
