--- a/_posts/user_guide_python/2015-05-27-python-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-python-tutorial.html
@@ -1,7 +1,7 @@
 ---
 permalink: python/python-tutorial/
 description: A tutorial on Python features most used with plotly in the Python User Guide
-name: python tutorial
+name: Python basics
 layout: base
 thumbnail: /images/static-image.png
 language: python
