--- a/_posts/user_guide_python/2015-05-27-streaming-bubbles-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-streaming-bubbles-tutorial.html
@@ -1,7 +1,7 @@
 ---
 permalink: python/streaming-bubbles-tutorial/
 description: A tutorial on how to make a beautiful streaming plot of an animated bubble chart with plotly and Python or IPython.
-name: streaming bubbles tutorial
+name: Streaming plots
 layout: base
 thumbnail: /images/static-image.png
 language: python
