--- a/_posts/user_guide_python/2015-05-27-streaming-double-pendulum-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-streaming-double-pendulum-tutorial.html
@@ -1,7 +1,7 @@
 ---
 permalink: python/streaming-double-pendulum-tutorial/
 description: A tutorial on how to make a beautiful streaming plot of a never-ending double pendulum simulation with plotly and Python or IPython.
-name: streaming double pendulum tutorial
+name: Streaming plots
 layout: base
 thumbnail: /images/static-image.png
 language: python
