--- a/_posts/user_guide_python/2015-05-27-streaming-line-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-streaming-line-tutorial.html
@@ -1,7 +1,7 @@
 ---
 permalink: python/streaming-line-tutorial/
 description: A tutorial on how to make beautiful streaming line plots with plotly and Python or IPython.
-name: streaming line tutorial
+name: Streaming plots
 layout: base
 thumbnail: /images/static-image.png
 language: python
