--- a/_posts/user_guide_python/2015-05-27-streaming-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-streaming-tutorial.html
@@ -1,7 +1,7 @@
 ---
 permalink: python/streaming-tutorial/
 description: An overview of plotly streaming plots with plotly and Python or IPython.
-name: streaming tutorial
+name: Streaming plots
 layout: base
 thumbnail: /images/static-image.png
 language: python
