--- a/_posts/user_guide_python/2015-05-27-user-guide.html
+++ b/_posts/user_guide_python/2015-05-27-user-guide.html
@@ -1,7 +1,7 @@
 ---
 permalink: python/user-guide/
 description: A User Guide for Plotly and its Python API Library
-name: user guide
+name: 
 layout: base
 thumbnail: /images/static-image.png
 language: python
