User guide styling

--- a/_posts/user_guide_python/2015-05-27-bubble-charts-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-bubble-charts-tutorial.html
@@ -2,10 +2,10 @@
 permalink: python/bubble-charts-tutorial/
 description: A tutorial on how to make beautiful bubble charts with plotly and Python or IPython.
 name: Bubble charts
-layout: base
+layout: user-guide
 thumbnail: /images/static-image.png
 language: python
-page_type: ipython
+page_type: u-guide
 has_thumbnail: false
 ---
 
@@ -3336,7 +3336,7 @@ This is the format of your plot grid:
     <div class="inner_cell">
      <div class="text_cell_render border-box-sizing rendered_html">
       <div style="float:right; \">
-       <img align="right" src="/static/api_docs/image/user_guide/python/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
+       <img align="right" src="{{site.staticurl}}/images/py-user-guide-img/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
       </div>
       <h4>
        Got Questions or Feedback?
