--- a/_posts/user_guide_python/2015-05-27-heatmaps-contours-and-2dhistograms-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-heatmaps-contours-and-2dhistograms-tutorial.html
@@ -2,10 +2,10 @@
 permalink: python/heatmaps-contours-and-2dhistograms-tutorial/
 description: A tutorial on how to make beautiful heatmaps, contours and 2D histograms with plotly and Python or IPython.
 name: Heatmaps, contours and 2d histograms
-layout: base
+layout: user-guide
 thumbnail: /images/static-image.png
 language: python
-page_type: ipython
+page_type: u-guide
 has_thumbnail: false
 ---
 
@@ -2030,7 +2030,7 @@ class Heatmap(PlotlyTrace)
        we define a custom colormap, but for now let's choose one from Plotly's selection of pre-defined colormaps. These are
       </p>
       <p>
-       <img src="/static/api_docs/image/user_guide/python/image12.png"/>
+       <img src="{{site.staticurl}}/images/py-user-guide-img/image12.png"/>
       </p>
       <p>
        and their associated names from left to right:
@@ -7761,7 +7761,7 @@ class Histogram2dContour(PlotlyTrace)
     <div class="inner_cell">
      <div class="text_cell_render border-box-sizing rendered_html">
       <div style="float:right; \">
-       <img align="right" src="/static/api_docs/image/user_guide/python/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
+       <img align="right" src="{{site.staticurl}}/images/py-user-guide-img/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
       </div>
       <h4>
        Got Questions or Feedback?
