--- a/_posts/user_guide_python/2015-05-27-line-and-scatter-plots-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-line-and-scatter-plots-tutorial.html
@@ -2,10 +2,10 @@
 permalink: python/line-and-scatter-plots-tutorial/
 description: A tutorial on how to make beautiful line and scatter plots with plotly and Python or IPython.
 name: Line and scatter plots
-layout: base
+layout: user-guide
 thumbnail: /images/static-image.png
 language: python
-page_type: ipython
+page_type: u-guide
 has_thumbnail: false
 ---
 
@@ -1864,7 +1864,7 @@ Scatter(
        already exist on your Plotly account. Your workspace would look something like:
       </p>
       <p>
-       <img src="/static/api_docs/image/user_guide/python/image09.png" style="padding-bottom:1em;"/>
+       <img src="{{site.staticurl}}/images/py-user-guide-img/image09.png" style="padding-bottom:1em;"/>
       </p>
       <p>
        If
@@ -1978,7 +1978,7 @@ Scatter(
        </li>
       </ol>
       <p>
-       <img src="/static/api_docs/image/user_guide/python/image10.png"/>
+       <img src="{{site.staticurl}}/images/py-user-guide-img/image10.png"/>
       </p>
      </div>
     </div>
@@ -3248,7 +3248,7 @@ Both
     <div class="inner_cell">
      <div class="text_cell_render border-box-sizing rendered_html">
       <div style="float:right; \">
-       <img align="right" src="/static/api_docs/image/user_guide/python/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
+       <img align="right" src="{{site.staticurl}}/images/py-user-guide-img/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
       </div>
       <h4>
        Got Questions or Feedback?
