--- a/_posts/user_guide_python/2015-05-27-overview.html
+++ b/_posts/user_guide_python/2015-05-27-overview.html
@@ -2,10 +2,10 @@
 permalink: python/overview/
 description: An overview of plotly and its Python API Library
 name: Overview
-layout: base
+layout: user-guide
 thumbnail: /images/static-image.png
 language: python
-page_type: ipython
+page_type: u-guide
 has_thumbnail: false
 ---
 
@@ -559,7 +559,7 @@ u'https://plot.ly/~etpinard/157'
        Here's a snapshot:
       </p>
       <p>
-       <img src="/static/api_docs/image/user_guide/python/image07.png"/>
+       <img src="{{site.staticurl}}/images/py-user-guide-img/image07.png"/>
       </p>
       <p>
        <br/>
@@ -29466,7 +29466,7 @@ class Box(PlotlyTrace)
        .
       </p>
       <p>
-       <img src="/static/api_docs/image/user_guide/python/image08.png"/>
+       <img src="{{site.staticurl}}/images/py-user-guide-img/image08.png"/>
       </p>
       <p>
        Change a few style options in a new copy of the figure on the web GUI. Then, find the figure's unique URL which is a combination of your username and the file ID of the plot, which is just a number. Watch the video below for an example:
@@ -29639,7 +29639,7 @@ From that video, the unique user-file_id pair was
     <div class="inner_cell">
      <div class="text_cell_render border-box-sizing rendered_html">
       <div style="float:right; \">
-       <img align="right" src="/static/api_docs/image/user_guide/python/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
+       <img align="right" src="{{site.staticurl}}/images/py-user-guide-img/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
       </div>
       <h4>
        Got Questions or Feedback?
