--- a/_posts/user_guide_python/2015-05-27-python-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-python-tutorial.html
@@ -2,10 +2,10 @@
 permalink: python/python-tutorial/
 description: A tutorial on Python features most used with plotly in the Python User Guide
 name: Python basics
-layout: base
+layout: user-guide
 thumbnail: /images/static-image.png
 language: python
-page_type: ipython
+page_type: u-guide
 has_thumbnail: false
 ---
 
@@ -3958,7 +3958,7 @@ For example, say you have a figure containing 4 subplots,
     <div class="inner_cell">
      <div class="text_cell_render border-box-sizing rendered_html">
       <div style="float:right; \">
-       <img align="right" src="/static/api_docs/image/user_guide/python/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
+       <img align="right" src="{{site.staticurl}}/images/py-user-guide-img/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
       </div>
       <h4>
        Got Questions or Feedback?
