--- a/_posts/user_guide_python/2015-05-27-streaming-bubbles-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-streaming-bubbles-tutorial.html
@@ -1,11 +1,11 @@
 ---
 permalink: python/streaming-bubbles-tutorial/
 description: A tutorial on how to make a beautiful streaming plot of an animated bubble chart with plotly and Python or IPython.
-name: Streaming plots
-layout: base
+name: Streaming
+layout: user-guide
 thumbnail: /images/static-image.png
 language: python
-page_type: ipython
+page_type: u-guide
 has_thumbnail: false
 ---
 
@@ -678,7 +678,7 @@ has_thumbnail: false
        You should have, opened in a new tab, something like (in our old UI)
       </p>
       <p>
-       <img src="/static/api_docs/image/user_guide/python/image16.png" style="padding-top:1em; padding-bottom:1em;"/>
+       <img src="{{site.staticurl}}/images/py-user-guide-img/image16.png" style="padding-top:1em; padding-bottom:1em;"/>
       </p>
      </div>
     </div>
@@ -1129,7 +1129,7 @@ write(self, trace, layout=None, validate=True, reconnect_on=(200, '', 408)) meth
     <div class="inner_cell">
      <div class="text_cell_render border-box-sizing rendered_html">
       <div style="float:right; \">
-       <img align="right" src="/static/api_docs/image/user_guide/python/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
+       <img align="right" src="{{site.staticurl}}/images/py-user-guide-img/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
       </div>
       <h4>
        Got Questions or Feedback?
