--- a/_posts/user_guide_python/2015-05-27-streaming-line-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-streaming-line-tutorial.html
@@ -2,10 +2,10 @@
 permalink: python/streaming-line-tutorial/
 description: A tutorial on how to make beautiful streaming line plots with plotly and Python or IPython.
 name: Streaming plots
-layout: base
+layout: user-guide
 thumbnail: /images/static-image.png
 language: python
-page_type: ipython
+page_type: u-guide
 has_thumbnail: false
 ---
 
@@ -772,7 +772,7 @@ class Stream(PlotlyDict)
        Great! Your Plotly streaming plot is intialized. Here's a screenshot:
       </p>
       <p>
-       <img src="/static/api_docs/image/user_guide/python/image14.png"/>
+       <img src="{{site.staticurl}}/images/py-user-guide-img/image14.png"/>
       </p>
       <p>
        <br/>
@@ -1256,7 +1256,7 @@ that the graphs are plotting identical data!).
     <div class="inner_cell">
      <div class="text_cell_render border-box-sizing rendered_html">
       <div style="float:right; \">
-       <img align="right" src="/static/api_docs/image/user_guide/python/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
+       <img align="right" src="{{site.staticurl}}/images/py-user-guide-img/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
       </div>
       <h4>
        Got Questions or Feedback?
