--- a/_posts/user_guide_python/2015-05-27-streaming-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-streaming-tutorial.html
@@ -1,11 +1,11 @@
 ---
 permalink: python/streaming-tutorial/
-description: An overview of plotly streaming plots with plotly and Python or IPython.
-name: Streaming plots
-layout: base
+description: A User Guide for Plotly and its Python API Library
+name: Streaming | Python User Guide | Plotly
+layout: user-guide
 thumbnail: /images/static-image.png
 language: python
-page_type: ipython
+page_type: u-guide
 has_thumbnail: false
 ---
 
@@ -401,7 +401,7 @@ Readers looking for info about the nuts and bolts of Plotly's streaming API shou
        button in the upper-right corner of the page:
       </p>
       <p>
-       <img src="/static/api_docs/image/user_guide/python/image03.png" style="margin-top:1em; margin-bottom:1em"/>
+       <img src="{{site.staticurl}}/images/py-user-guide-img/image03.png" style="margin-top:1em; margin-bottom:1em"/>
       </p>
       <p style="margin-top:1.5em;,margin-bottom:1.5em">
        Under the
@@ -415,7 +415,7 @@ Readers looking for info about the nuts and bolts of Plotly's streaming API shou
        button:
       </p>
       <p>
-       <img src="/static/api_docs/image/user_guide/python/image13.png"/>
+       <img src="{{site.staticurl}}/images/py-user-guide-img/image13.png"/>
       </p>
       <p>
        And there you go, you have generated a stream token. Please note that:
@@ -586,7 +586,7 @@ Readers looking for info about the nuts and bolts of Plotly's streaming API shou
     <div class="inner_cell">
      <div class="text_cell_render border-box-sizing rendered_html">
       <div style="float:right; \">
-       <img align="right" src="/static/api_docs/image/user_guide/python/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
+       <img align="right" src="{{site.staticurl}}/images/py-user-guide-img/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
       </div>
       <h4>
        Got Questions or Feedback?
