--- a/_posts/user_guide_python/2015-05-27-user-guide.html
+++ b/_posts/user_guide_python/2015-05-27-user-guide.html
@@ -1,11 +1,11 @@
 ---
 permalink: python/user-guide/
 description: A User Guide for Plotly and its Python API Library
-name: 
-layout: base
+name: Python User Guide | Plotly
+layout: user-guide
 thumbnail: /images/static-image.png
 language: python
-page_type: ipython
+page_type: u-guide
 has_thumbnail: false
 ---
 
@@ -42,7 +42,7 @@ has_thumbnail: false
        <br/>
       </p>
       <p>
-       <img alt="Plotly tinkerbell" height="400px/" src="/static/api_docs/image/user_guide/python/image01.jpg"/>
+       <img alt="Plotly tinkerbell" height="400px/" src="{{site.staticurl}}{{site.staticurl}}/images/py-user-guide-img/image01.jpg"/>
       </p>
       <p>
        <br/>
@@ -570,7 +570,7 @@ the User Guide intends to turn beginner and intermediate Plotly users into exper
          button.
         </p>
         <p>
-         <img src="/static/api_docs/image/user_guide/python/image02.png"/>
+         <img src="{{site.staticurl}}/images/py-user-guide-img/image02.png"/>
         </p>
        </li>
       </ul>
@@ -612,7 +612,7 @@ the User Guide intends to turn beginner and intermediate Plotly users into exper
          link
         </p>
         <p>
-         <img src="/static/api_docs/image/user_guide/python/image03.png" style="margin-top:1em; margin-bottom:1em"/>
+         <img src="{{site.staticurl}}/images/py-user-guide-img/image03.png" style="margin-top:1em; margin-bottom:1em"/>
         </p>
         <p>
          <br/>
@@ -627,7 +627,7 @@ the User Guide intends to turn beginner and intermediate Plotly users into exper
          .
         </p>
         <p>
-         <img src="/static/api_docs/image/user_guide/python/image04.png"/>
+         <img src="{{site.staticurl}}/images/py-user-guide-img/image04.png"/>
         </p>
        </li>
       </ul>
@@ -877,7 +877,7 @@ the User Guide intends to turn beginner and intermediate Plotly users into exper
        :
       </p>
       <p>
-       <img src="/static/api_docs/image/user_guide/python/image05.png" style="padding-top:1em; padding-bottom:1em;"/>
+       <img src="{{site.staticurl}}/images/py-user-guide-img/image05.png" style="padding-top:1em; padding-bottom:1em;"/>
       </p>
       <p>
        and unpack the
@@ -979,7 +979,7 @@ you caught some typos:
     <div class="inner_cell">
      <div class="text_cell_render border-box-sizing rendered_html">
       <div style="float:right; \">
-       <img align="right" src="/static/api_docs/image/user_guide/python/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
+       <img align="right" src="{{site.staticurl}}/images/py-user-guide-img/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
       </div>
       <h4>
        Got Questions or Feedback?
