--- a/_posts/user_guide_python/2015-05-27-3d-plots-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-3d-plots-tutorial.html
@@ -1,11 +1,12 @@
+
 ---
 permalink: python/3d-plots-tutorial/
 description: A tutorial on how to make beautiful 3d plots with plotly and Python or IPython.
-name: 3d plots
-layout: base
+name: 3D Plots
+layout: user-guide
 thumbnail: /images/static-image.png
 language: python
-page_type: ipython
+page_type: u-guide
 has_thumbnail: false
 ---
 
@@ -2432,7 +2433,7 @@ u'https://plot.ly/~etpinard/521'
     <div class="inner_cell">
      <div class="text_cell_render border-box-sizing rendered_html">
       <div style="float:right; \">
-       <img align="right" src="/static/api_docs/image/user_guide/python/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
+       <img align="right" src="{{site.staticurl}}/images/py-user-guide-img/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
       </div>
       <h4 style="padding-top:60px;">
        Got Questions or Feedback?
