--- a/_posts/user_guide_python/2015-05-27-matplotlib-to-plotly-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-matplotlib-to-plotly-tutorial.html
@@ -2,10 +2,10 @@
 permalink: python/matplotlib-to-plotly-tutorial/
 description: A tutorial on how to convert matplotlib figures to beautiful plotly figures.
 name: Matplotlib to plotly
-layout: base
+layout: user-guide
 thumbnail: /images/static-image.png
 language: python
-page_type: ipython
+page_type: u-guide
 has_thumbnail: false
 ---
 
@@ -5838,7 +5838,7 @@ lP6TJEmSJEmSJEmSJEmSJEmSJEmStFL8H3Iz1zLA7uDpAAAAAElFTkSuQmCC
     <div class="inner_cell">
      <div class="text_cell_render border-box-sizing rendered_html">
       <div style="float:right; \">
-       <img align="right" src="/static/api_docs/image/user_guide/python/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
+       <img align="right" src="{{site.staticurl}}/images/py-user-guide-img/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
       </div>
       <h4>
        Got Questions or Feedback?
