--- a/_posts/user_guide_python/2015-05-27-streaming-double-pendulum-tutorial.html
+++ b/_posts/user_guide_python/2015-05-27-streaming-double-pendulum-tutorial.html
@@ -2,10 +2,10 @@
 permalink: python/streaming-double-pendulum-tutorial/
 description: A tutorial on how to make a beautiful streaming plot of a never-ending double pendulum simulation with plotly and Python or IPython.
 name: Streaming plots
-layout: base
+layout: user-guide
 thumbnail: /images/static-image.png
 language: python
-page_type: ipython
+page_type: u-guide
 has_thumbnail: false
 ---
 
@@ -510,7 +510,7 @@ has_thumbnail: false
        Here's a screenshot of our plot pre-streaming (with our old UI):
       </p>
       <p>
-       <img src="/static/api_docs/image/user_guide/python/image15.png"/>
+       <img src="{{site.staticurl}}/images/py-user-guide-img/image15.png"/>
       </p>
       <p>
        <br/>
@@ -793,7 +793,7 @@ has_thumbnail: false
     <div class="inner_cell">
      <div class="text_cell_render border-box-sizing rendered_html">
       <div style="float:right; \">
-       <img align="right" src="/static/api_docs/image/user_guide/python/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
+       <img align="right" src="{{site.staticurl}}/images/py-user-guide-img/image06.png" style="float:right; margin-left: 5px; margin-top: -10px"/>
       </div>
       <h4>
        Got Questions or Feedback?
