fix index img  and userguide

--- a/_posts/2015-04-05-python-index.html
+++ b/_posts/2015-04-05-python-index.html
@@ -9,7 +9,7 @@ language: python
 <h1 class="centered">Plotly Python Library</h1>
 	<div class="row centered btnrow">
 		<a href="/python/getting-started/" class="button no_underline">Getting Started</a>
-		<a href="https://plot.ly/python/user-guide/" class="button no_underline">User Guide</a>
+		<a href="/python/user-guide/" class="button no_underline">User Guide</a>
 		<a href="/python/ipython-notebooks/" class="button no_underline">Ipython Notebooks</a>
 		<a href="https://plot.ly/python/reference/" class="button no_underline">Reference</a>
 	</div>
