matlab and r user guides

--- a/_posts/2015-04-05-r-index.html
+++ b/_posts/2015-04-05-r-index.html
@@ -9,7 +9,7 @@ language: r
 <h1 class="centered">Plotly R Library</h1>
 	<div class="row centered btnrow">
 		<a href="/r/getting-started/" class="button no_underline">Getting Started</a>
-		<a href="https://plot.ly/r/user-guide/" class="button no_underline">User Guide</a>
+		<a href="/r/user-guide/" class="button no_underline">User Guide</a>
 		<a href="https://plot.ly/r/reference/" class="button no_underline">Reference</a>
 	</div>
 	<div class="tipbox row">
@@ -21,5 +21,5 @@ language: r
 	<h2>Documentation Examples</h2>
 		{% assign languagelistimg = site.posts | where:"page_type":"example_index" | where:"language","r"  | where:"has_thumbnail",true %}
 		{% assign languagelist = site.posts | where:"page_type":"example_index" | where:"language","r" %}
-		
+
 		{% include documentation_eg.html %}
